# OE

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_CN.md  Doxyfile  README.md  README_CN.md  SECURITY.md  dub.sdl  git-flow-plus.config  package-lock.json  package.json  release.config.js  xmake.lua
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: codeql.yml  labels.yml  release.yml  test.yml
.husky/: pre-commit
include/oe/: allocator.hpp  api.h  configs.h  detections.h  detections.hpp  preprocessor.h  traits.hpp  types.hpp
include/oe/allocator/: allocator_define.hpp  allocator_interfaces.hpp  allocator_traits.hpp  dynamic_allocator.hpp  static_allocator.hpp
include/oe/allocator/impls/: c_allocator.hpp
include/oe/array/: dyn_size_array.hpp
include/oe/detections/: compiler.hpp  compiler_detections.h  language_version.h  language_version.hpp  msvc_flag_detection.hpp  platform_detections.h  system.hpp
include/oe/meta/: has_member_define.hpp  requires.hpp
include/oe/oe/: api.h  configs.h.in  idcontact.h  unused.h
include/oe/preprocessor/: concat.h
include/oe/traits/: traits.hpp
include/oe/types/: types.hpp
metas/: configs.json
scripts/: add_module.sh  compiler_detections_generate.js  platform_detections_generate.js
src/oe/: meta.ixx  types.ixx
src/oe/meta/: concepts.ixx  traits.ixx
src/oe/types/: basic_types.ixx  char_traits.ixx  char_types.ixx
src/oe/types/details/: basic_char_traits.ixx  char_define.ixx  char_traits_define.ixx
tests/: base_test.hpp  test_allocator.cpp  test_types.cpp
xmake/: libs.lua
